...
      appBar: AppBar(
        title: const TituloAppBarSpinFlow(),
        actions: [const AcaoSairAppBar()],
        bottom: TabBar(
          controller: _tabController,
          tabs: [
            ConfiguracaoAbas.texto('Todas'),
            ConfiguracaoAbas.texto('Este mes'),
            ConfiguracaoAbas.texto('Ultimos 3 meses'),
          ],
        ),
      ),
      body: _aluno == null
          ? const Center(child: Text('Aluno autenticado nao encontrado.'))
...
